<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<TextView
		android:id="@+id/textView_title"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="@dimen/screen_padding"
		android:layout_marginTop="24dp"
		android:drawablePadding="@dimen/screen_padding"
		android:gravity="center_horizontal"
		android:text="@string/app_update_available"
		android:textAppearance="?textAppearanceHeadline5"
		app:drawableTint="?colorPrimary"
		app:drawableTopCompat="@drawable/ic_app_update" />

	<com.google.android.material.progressindicator.LinearProgressIndicator
		android:id="@+id/progressBar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="@dimen/screen_padding"
		android:layout_marginTop="@dimen/screen_padding"
		android:max="100"
		android:visibility="gone"
		tools:visibility="visible" />

	<TextView
		android:id="@+id/textView_error"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="@dimen/screen_padding"
		android:layout_marginTop="8dp"
		android:textColor="?colorError"
		android:visibility="gone"
		tools:text="@string/error_corrupted_file"
		tools:visibility="visible" />

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/inputLayout_mirror"
		style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="@dimen/screen_padding"
		android:layout_marginTop="@dimen/screen_padding"
		android:hint="@string/pref_github_mirror"
		app:startIconDrawable="@drawable/ic_web">

		<com.google.android.material.textfield.MaterialAutoCompleteTextView
			android:id="@+id/autoComplete_mirror"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="none" />

	</com.google.android.material.textfield.TextInputLayout>

	<TextView
		android:id="@+id/textView_mirror_summary"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="@dimen/screen_padding"
		android:layout_marginTop="4dp"
		android:text="@string/app_update_mirror_summary"
		android:textAppearance="?textAppearanceBodySmall"
		android:textColor="?android:textColorSecondary" />

	<ScrollView
		android:id="@+id/scrollView"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_marginTop="@dimen/screen_padding"
		android:layout_weight="1">

		<TextView
			android:id="@+id/textView_content"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingHorizontal="@dimen/screen_padding"
			android:paddingBottom="@dimen/screen_padding"
			android:textAppearance="?textAppearanceBodyMedium"
			tools:text="@tools:sample/lorem/random" />

	</ScrollView>

	<com.google.android.material.dockedtoolbar.DockedToolbarLayout
		android:id="@+id/docked_toolbar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:fitsSystemWindows="false">

		<FrameLayout
			android:id="@+id/docked_toolbar_child"
			android:layout_width="match_parent"
			android:layout_height="@dimen/m3_comp_toolbar_docked_container_height">

			<Button
				android:id="@+id/button_cancel"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_vertical|start"
				android:text="@android:string/cancel" />

			<Button
				android:id="@+id/button_update"
				style="?materialButtonTonalStyle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_vertical|end"
				android:enabled="false"
				android:text="@string/update" />

		</FrameLayout>
	</com.google.android.material.dockedtoolbar.DockedToolbarLayout>

</LinearLayout>
